--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "ff"
 version = "0.1.0"
+description = "A command line tool to find files and directories by name."
 edition = "2021"
-
+homepage = "https://github.com/tengfei-xy/ff"
+repository = "https://github.com/tengfei-xy/ff"
+license = "MIT OR Apache-2.0"
+keywords = ["find", "file", "directory", "search"]
+readme = "README.MD"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
