--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ff"
+name = "tengfei-ff"
 version = "0.1.0"
 description = "A command line tool to find files and directories by name."
 edition = "2021"
